[package]
name = "mm-git"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
dotenvy = "0.15.7"
git2 = "0.19.0"
log = "0.4.22"
serde = "1.0.215"
serde_json = "1.0.132"
simplelog = "0.12.2"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "uuid"] }
ssh-key = "0.6.7"
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
