[package]
name = "mm-git"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Guschin <guschin.drew@gmail.com>"]

[dependencies]
actix-web = "4"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
git2 = "0.19"
log = "0.4"
serde = "1"
serde_json = "1"
simplelog = "0.12"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
ssh-key = "0.6.7"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
